--- a/src/App.css
+++ b/src/App.css
@@ -265,6 +265,9 @@ input {
 .hl {
     background-color: #845d0d;
 }
+.hl>b{
+    color: black;
+}
 .max-cp {
     display: block;
     padding-left: 1.5rem;
